# rusty6502

./: .gitignore  Cargo.toml  LICENSE  README.md  lsan-suppressions.txt
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  ci.yml  safety.yml  scheduled.yml  test.yml
assemble/: Cargo.toml
assemble/src/: lib.rs  tests.rs
assembler/: Cargo.toml
assembler/src/: main.rs
c64basic/: Cargo.toml
c64basic/src/: lib.rs  tests.rs
chip/: Cargo.toml
chip/src/: lib.rs
convertprg/: Cargo.toml  clippy.toml
convertprg/src/: main.rs
cpu/: Cargo.toml
cpu/src/: TODO  cmos_opcodes.rs  lib.rs  lookup.rs  lsan-suppressions.txt  nmos_opcodes.rs  tests.rs  tests2.rs
cpu/src/disassemble/: mod.rs
cpu_proc_macros/: Cargo.toml
cpu_proc_macros/src/: lib.rs
disassemble/: Cargo.toml
disassemble/src/: lib.rs
disassembler/: Cargo.toml
disassembler/src/: main.rs
handasm/: Cargo.toml
handasm/src/: main.rs
io/: Cargo.toml
io/src/: lib.rs
irq/: Cargo.toml
irq/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs  tests.rs
monitor/: Cargo.toml  README.md
monitor/src/: commands.rs  lib.rs  main.rs  tests.rs
monitor_gui/: Cargo.toml
monitor_gui/src/: main.rs
monitor_tui/: Cargo.toml
monitor_tui/src/: main.rs
nes/apu/: Cargo.toml
nes/apu/src/: lib.rs
nes/cart_renderer/: Cargo.toml
nes/cart_renderer/src/: main.rs
nes/ines/: Cargo.toml
nes/ines/src/: lib.rs  tests.rs
nes/ines_debug/: Cargo.toml
nes/ines_debug/src/: main.rs
nes/nes_chr/: Cargo.toml
nes/nes_chr/src/: lib.rs  tests.rs
nes/nes_memory/: Cargo.toml
nes/nes_memory/src/: lib.rs
nes/nes_pal/: Cargo.toml
nes/nes_pal/src/: lib.rs  tests.rs
nes/nes_pal_gui/: Cargo.toml
nes/nes_pal_gui/src/: lib.rs
nes/nes_pal_render/: Cargo.toml
nes/nes_pal_render/src/: main.rs
nes/ppu/: Cargo.toml
nes/ppu/src/: lib.rs
nes_chr/src/: lib.rs  tests.rs
nes_pal/src/: lib.rs  tests.rs
nes_pal_render/src/: main.rs
src/: lib.rs
testdata/: README.md  bcd_test.asm  bcd_test.lst  bcd_test_cmos.asm  rom.asm  testasm-cmos.asm  testasm.asm  testasm2.asm  undocumented.asm  undocumented.handasm
testdata/badasm/: bad_asciiz.asm  bad_asciiz2.asm  bad_branch.asm  bad_byte.asm  bad_equ.asm  bad_include2.asm  bad_label2.asm  bad_label3.asm  bad_label_crossref.asm  bad_opcode.asm  bad_opcode2.asm  bad_opcode3.asm  bad_opcode4.asm  bad_opcode_label.asm  bad_token.asm  bad_word.asm  bad_word2.asm  cmos-bbr.asm  cmos-bbr2.asm  cmos-bbr3.asm  cmos-bbr4.asm  double_equ_ref.asm  dup_location.asm  invalid_equ.asm  invalid_equ_value.asm  invalid_label.asm  invalid_opcode.asm  invalid_org.asm  invalid_tokens.asm  not_ascii.asm
