[workspace]
members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
]
default-members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
]

[profile.test]
opt-level = 3

[profile.bench]
debug = true

[profile.release]
debug = true

[workspace.dependencies]
clap = { version = "~4.0", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.2", default-features = false }
# Force bind proc-macro2 as the default most people are on (1.0.58) doesn't
# work on nightly after 2023-06-27
proc-macro2 = { version = "=1.0.66", features=["default", "proc-macro"] }
rand = "0.8.5"
regex = "1"
strum_macros = "0.24.1"
strum = "0.24.1"
thiserror = "1.0.44"

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["James Chacon <chacon.james@gmail.com>"]

[package]
name = "rusty6502"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
memory = { path = "./memory", version = "~0.1" }
cpu = { path = "./cpu", version = "~0.1" }
chip = { path = "./chip", version = "~0.1" }
