[workspace]
members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
    "./monitor_gui",
    "./monitor_tui",
    "./nes_pal",
    "./nes_pal_render",
]
default-members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
    "./monitor_gui",
    "./monitor_tui",
    "./nes_pal",
    "./nes_pal_render",
]

[profile.test]
opt-level = 3

[profile.bench]
debug = true

[profile.release]
debug = true

[workspace.dependencies]
ahash = "0.8.6"
assemble = { path = "./assemble", version = "~0.1" }
c64basic = { path = "./c64basic", version = "~0.1" }
chip = { path = "./chip", version = "~0.1" }
clap = { version = "~4.0", features = ["derive", "wrap_help"] }
clap-num = "1.0.2"
color-eyre = { version = "0.6.2", default-features = false }
cpu_proc_macros = { path = "./cpu_proc_macros", version = "~0.1" }
eframe = "0.23.0"
egui = "0.23.0"
io = { path = "./io", version = "~0.1" }
irq = { path = "./irq", version = "~0.1" }
memory = { path = "./memory", version = "~0.1" }
monitor = { path="./monitor", version = "~0.1" }
nes_pal = { path="./nes_pal", version = "~0.1" }
ntest = "0.9.0"
rand = "0.8.5"
regex = "1.10.2"
rusty6502 = { path = "./", version = "~0.1" }
strum_macros = "0.24.1"
strum = "0.24.1"
tempfile = "3.8.0"
thiserror = "1.0.50"

proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits", "full"] }

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["James Chacon <chacon.james@gmail.com>"]

[package]
name = "rusty6502"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
memory = { path = "./memory", version = "~0.1" }
cpu = { path = "./cpu", version = "~0.1" }
chip = { path = "./chip", version = "~0.1" }

serde_derive = "~1.0.75" # minimal versions pin
