[workspace]
members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
    "./monitor_gui",
    "./monitor_tui",
    "./nes/cart_renderer",
    "./nes/ines",
    "./nes/ines_debug",
    "./nes/nes_chr",
    "./nes/nes_pal",
    "./nes/nes_pal_gui",
    "./nes/nes_pal_render",
]
default-members = [
    "./assemble",
    "./assembler",
    "./c64basic",
    "./chip",
    "./convertprg",
    "./cpu",
    "./cpu_proc_macros",
    "./disassembler",
    "./handasm",
    "./io",
    "./irq",
    "./memory",
    "./monitor",
    "./monitor_gui",
    "./monitor_tui",
    "./nes/cart_renderer",
    "./nes/ines",
    "./nes/ines_debug",
    "./nes/nes_chr",
    "./nes/nes_pal",
    "./nes/nes_pal_gui",
    "./nes/nes_pal_render",
]
resolver = "2"

[profile.test]
opt-level = 3

[profile.bench]
debug = true

[profile.release]
debug = true

[workspace.dependencies]
ahash = "0.8.6"
assemble = { path = "./assemble", version = "~0.1" }
c64basic = { path = "./c64basic", version = "~0.1" }
chip = { path = "./chip", version = "~0.1" }
clap = { version = "~4.0", features = ["derive", "wrap_help"] }
clap-num = "1.0.2"
color-eyre = { version = "0.6.2", default-features = false }
cpu_proc_macros = { path = "./cpu_proc_macros", version = "~0.1" }
eframe = "0.23.0"
egui = "0.23.0"
ines = { path = "./nes/ines", version = "~0.1" }
io = { path = "./io", version = "~0.1" }
irq = { path = "./irq", version = "~0.1" }
memory = { path = "./memory", version = "~0.1" }
monitor = { path="./monitor", version = "~0.1" }
nes_chr = { path="./nes/nes_chr", version = "~0.1" }
nes_pal = { path="./nes/nes_pal", version = "~0.1" }
nes_pal_gui = { path="./nes/nes_pal_gui", version = "~0.1" }
ntest = "0.9.0"
rand = "0.8.5"
regex = "1.10.2"
rusty6502 = { path = "./", version = "~0.1" }
serde = "1.0.193"
serde_json = "1.0.108"
strum_macros = "0.24.1"
strum = "0.24.1"
tempfile = "3.9.0"
thiserror = "1.0.51"

proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.43", features = ["extra-traits", "full"] }

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["James Chacon <chacon.james@gmail.com>"]

[package]
name = "rusty6502"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
memory = { path = "./memory", version = "~0.1" }
cpu = { path = "./cpu", version = "~0.1" }
chip = { path = "./chip", version = "~0.1" }

