[package]
name = "assembler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
assemble = { path = "../assemble", version = "~0.1" }
rusty6502  = { path = "../", version = "~0.1" }

color-eyre = { workspace = true }
clap = { workspace = true }
proc-macro2 = { workspace = true }
