[package]
name    = "cpu"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chip  = { path = "../chip", version = "~0.1" }
irq  = { path = "../irq", version = "~0.1" }
memory  = { path = "../memory", version = "~0.1" }
color-eyre = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
ringbuffer = { version = "0.10.0" }