[package]
name    = "cpu"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chip  = { path = "../chip", version = "~0.1" }
io  = { path = "../io", version = "~0.1" }
irq  = { path = "../irq", version = "~0.1" }
memory  = { path = "../memory", version = "~0.1" }
color-eyre = { workspace = true }
rand = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
