[package]
name    = "cpu"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
chip = { workspace = true }
cpu_proc_macros = { workspace = true }
io = { workspace = true }
irq = { workspace = true }
memory = { workspace = true }

color-eyre = { workspace = true }
rand = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
