[package]
name = "disassembler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rusty6502 = { path = "../", version = "~0.1" }
c64basic = { path = "../c64basic", version = "~0.1" }
clap = { workspace = true }
color-eyre = { workspace = true }
