[package]
name = "disassembler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
c64basic = { path = "../c64basic", version = "~0.1" }
rusty6502 = { path = "../", version = "~0.1" }

clap = { workspace = true }
color-eyre = { workspace = true }
proc-macro2 = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }

