[package]
name = "disassembler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
c64basic = { workspace = true }
rusty6502 = { workspace = true }

clap = { workspace = true }
clap-num = { workspace = true }
color-eyre = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }

