[package]
name = "monitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
rusty6502 = { path = "../", version = "~0.1" }

clap = { workspace = true }
color-eyre = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
