[package]
name = "monitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
rusty6502 = { workspace = true }

color-eyre = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
ntest = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
