[package]
name = "monitor_gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
rusty6502 = { workspace = true }

color-eyre = { workspace = true }
eframe = "0.22.0"
egui = "0.23.0"

monitor = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
