[package]
name = "nes_pal_gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
nes_pal = { workspace = true }
