[package]
name = "nes_pal_render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
nes_pal = { workspace = true }
nes_pal_gui = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
